--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         </activity>
         <activity android:name=".activity.LoginActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar"/>
+        <activity android:name=".activity.MainFragmentActivity"/>
     </application>
 
 </manifest>
