--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile files('libs/gson-2.3.1.jar')
     compile project(':UpGradeUtils')
+    compile files('libs/umeng-analytics-v6.0.9.jar')
 }
