--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.LoginActivity"/>
+        <activity android:name=".activity.SuggestActivity"/>
+        <activity android:name=".activity.ForgetPwdActivity"/>
+        <activity android:name=".activity.RegisterActivity"/>
         <activity android:name=".activity.MainFragmentActivity"/>
+        <activity android:name=".activity.PersonMyCommissionActivity"/>
+        <activity android:name=".activity.PersonMyRecommendActivity"/>
+        <activity android:name=".activity.PersonSettingActivity"/>
         <meta-data android:value="58b644c22ae85b5645001992" android:name="UMENG_APPKEY"/>
         <meta-data android:value="laotongxue-Android" android:name="UMENG_CHANNEL"/>
     </application>
